--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button onclick="toggleTheme()" style="margin-bottom: 20px">
+      Toggle Theme
+    </button>
     <div class="calculator">
       <input type="text" id="display" disabled />
       <div class="buttons">
@@ -32,6 +35,7 @@
 
         <button onclick="appendValue('0')">0</button>
         <button onclick="appendValue('.')">.</button>
+        <button onclick="appendValue('%')">%</button>
       </div>
     </div>
 
